--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,9 +9,8 @@
 
 
 .App{
-    height: 100vh;
+    width: 100%;
     min-height: 100vh;
-    max-width: 100vw;
     display: inline-flex;
     overflow-x: hidden;
     &.light{
@@ -29,12 +28,22 @@
 @import "../components/Sidebar/index";
 @import "../components/MobileNav/index";
 @import "../components/Search/index";
+@import "../components/Footer/index";
 
 
 // Pages
 @import "./pages/Blog";
+@import "./pages/Contact";
+@import "./pages/SignIn";
+@import "./pages/SignUp";
 
 // Utility classes
 .hide{
     display: none;
 }
+
+@include min-max-width(min, 50em){
+    .hide{
+        display: block;
+    }
+} 
