finished up frontend

--- a/src/components/Footer/_index.scss
+++ b/src/components/Footer/_index.scss
@@ -4,7 +4,10 @@
     &_top{
         @include flex-col($size-300)
     }
+
     &_bottom{
+        @include flex-ac-sb;
+        width: 100%;
         align-self: flex-start;
         ul{
             display: flex;
@@ -18,6 +21,15 @@
                 }
             }
         }
+
+        .Switch{
+            button{
+                @include icon;
+                padding: $size-100;
+                font-size: $size-400;
+                border-radius: $size-100;
+            }
+        }
     }
 }
 
@@ -26,6 +38,10 @@
         flex-direction: row;
         justify-content: space-between;
         &_bottom{
+            flex-direction: column-reverse;
+            align-items: flex-end;
+            gap: $size-100;
+            width: fit-content;
             align-self: flex-end;
         }
     }
@@ -48,6 +64,12 @@
                     }
                 }
             }
+
+            .Switch{
+                button{
+                    background: $clr-light-grey-03;
+                }
+            }
         }
     }
 }
@@ -67,6 +89,13 @@
                             color: $clr-dark-grey-02;
                         }
                     }
+                }
+            }
+
+            .Switch{
+                button{
+                    background: $clr-dark-grey-03;
+                    color: $clr-dark-primary;
                 }
             }
         }
