--- a/src/styles/pages/_Blogs.scss
+++ b/src/styles/pages/_Blogs.scss
@@ -1,8 +1,11 @@
 .Blogs{
-    min-width: 100%;
+    width: 100%;
 
     main{
         padding: $size-300;
+        a{
+            text-decoration: none
+        }
         h2{
             @include header;
         }
@@ -41,7 +44,7 @@
 
 @include min-max-width(min, 50em){
     .Blogs{
-        min-width: 60%;
+        width: 60%;
         margin-inline: auto;
         .content{
             min-width: 100%;
