done with frontend

--- a/src/components/Footer/_index.scss
+++ b/src/components/Footer/_index.scss
@@ -23,6 +23,9 @@
         }
 
         .Switch{
+            @include flex-ac($size-100);
+            justify-content: flex-end;
+            flex-wrap: wrap;
             button{
                 @include icon;
                 padding: $size-100;
