--- a/src/components/Sidebar/_index.scss
+++ b/src/components/Sidebar/_index.scss
@@ -2,7 +2,7 @@
     @include flex-col(0);
     min-height: 100%;
     min-width: 60%;
-    width: max-content;
+    // max-width: max-content;
     padding: $size-300;
 
     .logo,
@@ -46,6 +46,7 @@
 @include min-max-width(min, 50em){
     .Sidebar{
         min-width: 15%;
+        width: 28%;
 
         .logo,
         .search{
