--- a/src/styles/pages/_Details.scss
+++ b/src/styles/pages/_Details.scss
@@ -131,11 +131,7 @@
                 }
     
                 button{
-                    background: $clr-light-accent;
-                    color: $clr-light-white;
-                    &:is(:hover, :focus-within){
-                        background: $clr-light-accent-hover;
-                    }
+                    @include light-button;
                 }
             }
         }
@@ -185,11 +181,7 @@
                 }
     
                 button{
-                    background: $clr-dark-accent;
-                    color: $clr-dark-white;
-                    &:is(:hover, :focus-within){
-                        background: $clr-dark-accent-hover;
-                    }
+                    @include dark-button;
                 }
             }
         }
