--- a/src/styles/pages/_SignUp.scss
+++ b/src/styles/pages/_SignUp.scss
@@ -23,7 +23,6 @@
         &_bottom{
             form{
                 @include flex-col($size-400);
-
                 .avatar{
                     @include flex-ac($size-400);
                     img{
@@ -59,7 +58,6 @@
 @include min-max-width(min, 50em){
     .SignUp{
         .main{
-            max-width: 100%;
             flex-direction: row;
             margin-block: $size-700 $size-500;
             justify-content: space-between;
@@ -96,11 +94,7 @@
                 .action,
                 .avatar{
                     button{
-                        background: $clr-light-accent;
-                        color: $clr-light-white;
-                        &:is(:hover, :focus-within){
-                            background: $clr-light-accent-hover;
-                        }
+                        @include light-button;
                     }
                 }
             }
@@ -133,11 +127,7 @@
                 .action,
                 .avatar{
                     button{
-                        background: $clr-dark-accent;
-                        color: $clr-dark-white;
-                        &:is(:hover, :focus-within){
-                            background: $clr-dark-accent-hover;
-                        }
+                        @include dark-button;
                     }
                 }
             }
