--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -72,6 +72,7 @@
 @import "../components/MobileNav/index";
 @import "../components/Search/index";
 @import "../components/Footer/index";
+@import "../components/Pagination/index";
 
 
 // Pages
